tests/bad/tc4001-cue_settings_vertical_01_bad.vtt
WEBVTT

00:00.000 --> 00:10.000vertical:lr
Payload